--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,83 @@
-.container-header{
-    height: 20VH;
-    background: blue;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.myapp{
+     min-height: 100vh;
+     display: flex;
+     flex-direction: column;
+ }
+ /* HEADER */
+.header{
+    min-height: 20VH;
+    background: url(./assets/images/wall.jpg)  center/cover;
+}
+.header h1 {
+    font-family: 'Orbitron', sans-serif;
+    font-size: 2em;
+}
+.header button {
+    color: white;
+    font-family: 'Bangers', cursive;
+    padding: 12px 22px 15px;
+    background-color:rgb(40, 54, 92);
+    border-radius: 36px;
+    border: 2px solid white;
+    font-size: 1em;   
+}
+.header button:hover {
+    color: rgb(217,87,123);;
+    background-color: white;
+    border: 2px solid rgb(217,87,123);
+}
+.header button:focus{
+    outline: none;
+}
+
+
+
+/* Hero card  */
+.hero{
+    background-attachment:fixed;
+    flex: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color:rgb(203, 220, 228);
+}
+.card{
+    box-shadow:3px 4px 6px 0 rgba(60, 64, 67, 0.3);
+}
+.hero p {
+    font-family: 'Orbitron', sans-serif;
+    font-size: 0.7em;
+}
+.hero h5{
+    font-family: 'Bangers', cursive;
+}
+.hero ul {
+    list-style: none;
+}
+
+/* Footer */
+.footer{
+    min-height: 5vh;
+    background-color:  rgb(217,87,123);
+}
+
+
+.container-main h5{
+    font-family: 'Bangers', cursive;
+}
+.container-main p{
+    font-family: 'Orbitron', sans-serif;
+} */
+
+/* FOOTER */
+
+.container-footer{
+    min-height: 5vh;
+    background-color:rgb(217,87,123);
 }
