--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,7 @@
     color: white;
     font-family: 'Bangers', cursive;
     padding: 12px 22px 15px;
-    background-color:rgb(40, 54, 92);
+    background-color:#ff7979;
     border-radius: 36px;
     border: 2px solid white;
     font-size: 1em;   
